--- a/NixRoses/config/eww/eww.scss
+++ b/NixRoses/config/eww/eww.scss
@@ -1,7 +1,7 @@
 .bar {
   font-family: Inter;
   font-size: 14;
-  color: #f1ac9a;
+  color: #e4e6da;
 
 
   border-radius: 13;
@@ -9,11 +9,9 @@
   opacity: 0.90;
 }
 .title {
-  color: #e87369;
+  color: #e4e6da;
   font-size: 18;
   font-weight: bold;
-
-
 }
 
 .bottomInfo {
@@ -22,5 +20,5 @@
 }
 
 .smallsep {
-  color: #82c6c8;
+  color: #639c72;
 }
